Added extra functionality